<resources>
    <string name="app_name">Spell Rush</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_leaderboard">Spell Rush: Leaderboard</string>
    <string name="logo">logo</string>
    <string name="Spell_Rush">Spell Rush</string>
    <string name="Start">Start</string>
    <string name="Settings">Settings</string>
    <string name="Leader_Board">Leader Board</string>
    <string name="Will_Ritchie">Will Ritchie</string>
    <string name="Earl_John_Placido">Earl John Placido</string>
    <string name="Nathan_Carrier">Nathan Carrier</string>
    <string name="Chad_Hillary">Chad Hillary</string>
    <string name="Mike_Winkler">Mike Winkler</string>
    <string name="Trevor_Lentz">Special thanks to Trevor Lentz for the menu music :D</string>
    <string name="Avgvst">And to Avgvst for the game over music!</string>
    <string name="repo_link">https://github.com/TheWlr9/Spell-Rush</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboard_back">Go Back</string>
    <string name="leaderboard_header_name">Player Name</string>
    <string name="leaderboard_header_score">Score</string>
    <string name="title_activity_GameActivity">title_activity_GameActivity</string>
    <string name="title_activity_GameOverActivity">Game Over</string>
    <string name="Play_Again">Play Again</string>
    <string name="strQuit">Quit</string>
    <string name="player_name">Name</string>
    <string name="init_Value">000000</string>
    <string name="SubmitScore">Submit Score</string>
    <string name="Final_Score">Final Score</string>
    <string name="Game_Over">Game Over</string>
    <string name="starting">STARTING</string>
    <string name="level_1">LEVEL 1</string>
    <string name="level_complete">LEVEL COMPLETE!</string>
    <string name="Tutorial">Tutorial</string>
    <string name="settings_default_max_volume">100</string>
    <string name="settings_master_volume">Master Volume</string>
    <string name="settings_sound_effects_volume">Sound Effects Volume</string>
    <string name="settings_music_volume">Music Volume</string>
</resources>
