<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leaderboard_layou"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.spellrush.presentation.LeaderboardActivity">

    <TextView
        android:id="@+id/leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp" />

    <TableLayout
        android:id="@+id/leaderboard_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TableRow
            android:id="@+id/table_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/leaderboard_header_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leaderboard_header_name"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/leaderboard_header_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leaderboard_header_score"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:background="@color/colorPrimary" />
    </TableLayout>

    <Button
        android:id="@+id/ldr_brd_Menu"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/main_menu"
        android:textSize="36sp" />

</LinearLayout>